2007-12-19  Stuart Brorson (sdb@cloud9.net)
	* src/gerber.c, src/gerb_stats.[hc], src/gerb_image.h,
	src/gerb_error.h, src/callbacks.c:  Implemented reporting
	of apertures found in Gerber files.  Added to Gerber 
	reports window.
	
2007-12-17  Julian Lamb
	* render,callbacks,interface: Restructure the whole rendering process by
	  separating out all zoom and pan information from the global variable
	  "screen". This was necessary to allow rendering without having a gtk
	  window open, allowing for export from command line and many others.
	  Also, the translation and zoom code is much more readable due to the
	  elimination of many variables. Also, the GDK color allocations were
	  eliminated to allow rendering without existing GDK colormaps in place.
	* gerbv.c: Create the basic framework for exporting from the command line.	

2007-12-16  Stuart Brorson (sdb@cloud9.net)
	* src/callbacks.c, src/render.c, src/gerber.c,
	src/gerb_error.h, src/gerb_stats.[hc]:  Implemented reporting
	of parse errors (with error level) found dring parsing of the 
	Gerber files.
	
2007-12-16  Stuart Brorson (sdb@cloud9.net)
	* src/callbacks.c, src/render.c, src/gerb_error.h,
	src/drill.c, src/drill_stats.[hc]:  Implemented reporting
	of all parse errors (with error level) found during 
	parsing of the drill file.
	
2007-12-16  Stuart Brorson (sdb@cloud9.net)
	* src/drill.[hc], src/drill_stats.[hc]:
	Fixed bug noticed by Joerg involving display of statistics 
	in drill file with M71 calling out metric units.
	
2007-12-14  Stuart Brorson (sdb@cloud9.net)
	* src/callbacks.c, src/render.c:  Added "General" tab to reports 
	windows for both Gerbers and Drills.
	* src/Makefile.am, src/drill.c, src/gerb_image.h,
	src/gerb_stats.[hc], src/drill_stats.[hc]:  Refactor drill_stats
	stuff to its own files in accordance with our function naming 
	scheme.

2007-12-14  Stuart Brorson (sdb@cloud9.net)
	* Too many files to mention:  Start adding list of drills found 