@@ -375,20 +375,6 @@ render_zoom_to_fit_display (gerbv_render_info_t *renderInfo) {
 	return;
 }
 
-void render_force_expose_event_for_screen (void){
-
-	GdkRectangle update_rect;
-	
-	update_rect.x = 0;
-	update_rect.y = 0;
-	update_rect.width = screenRenderInfo.displayWidth;
-	update_rect.height = screenRenderInfo.displayHeight;
-
-	/* Calls expose_event */
-	gdk_window_invalidate_rect (screen.drawing_area->window, &update_rect, FALSE);
-}
-
-
 void render_refresh_rendered_image_on_screen (void) {
 #ifdef RENDER_USING_GDK
 	GdkWindow *window;
@@ -457,7 +443,7 @@ void render_refresh_rendered_image_on_screen (void) {
 
 
 #endif
-	render_force_expose_event_for_screen();
+	callbacks_force_expose_event_for_screen();
 }
 
 #ifndef RENDER_USING_GDK
