@@ -1,3 +1,7 @@
+2007-12-20  Julian Lamb
+	* render.c,callbacks.c,interface.c: Connect rulers and scrollbars and start
+	  getting them functional.
+	
 2007-12-19  Stuart Brorson (sdb@cloud9.net)
 	* src/gerber.c, src/gerb_stats.[hc], src/gerb_image.h,
 	src/gerb_error.h, src/callbacks.c:  Implemented reporting
